--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 contenuto
             </div>
             <div class="plan">
-                <div class="class-plan">
+                <div class="menù">
                     <div class="col-7">
                         <div class="next-class">
                             <div class="col-8">
