--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- MAIN -->
 
     <main>
-      <div class="main-content">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-2">
             <div class="sidebar">
