--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <header>
       <div class="container-fluid text-center">
         <div class="row align-items-center">
-          <div class="col-2">
+          <div class="col-2 p-0">
             <img src="./screenshots/img/img/logo.svg" alt="" srcset="" />
           </div>
-          <div class="col-8">
+          <div class="col-8 p-0">
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -45,7 +45,7 @@
               />
             </form>
           </div>
-          <div class="col-2">
+          <div class="col-2 p-0">
             <i class="fa-solid fa-list"></i>
             <i class="fa-solid fa-circle-question"></i>
             <i class="fa-solid fa-bars"></i>
@@ -63,7 +63,7 @@
     <main>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-2">
+          <div class="col-2 p-0">
             <div class="sidebar">
               <div class="features">
                 <span><i class="fa-solid fa-house"></i>Home</span>
@@ -75,7 +75,7 @@
               </div>
             </div>
           </div>
-          <div class="col-10">
+          <div class="col-10 p-0">
             <div class="top-bar">
               <div class="row-bar">
                 <div class="col-7">
