--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <div class="next-class">
                     <div class="col-7 p-1">
                       <h5 style="background-color: #f7f7f7">Prossime classi</h5>
-                      <table class="table">
+                      <table class="table" style="font-size: 0.7rem;">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
@@ -152,7 +152,7 @@
                       </table>
                     </div>
                   </div>
-                  <div class="faq">
+                  <div class="faq" style="font-size: 0.7rem;">
                     <div class="col-5 p-1">
                       <h5 style="background-color: #f7f7f7">F.A.Q.</h5>
                       <div class="accordion" id="accordionExample">
