--- a/index.html
+++ b/index.html
@@ -121,38 +121,148 @@
                   <div class="next-class">
                     <div class="col-7 p-1">
                       <h5 style="background-color: #f7f7f7">Prossime classi</h5>
-                      <table class="table" style="font-size: 0.7rem;">
+                      <table class="table" style="font-size: 0.7rem">
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Data d'inizio</th>
+                            <th scope="col">ROI</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col">Azioni</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
                           </tr>
                           <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
                           </tr>
                           <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">
+                              <div class="table-img">
+                                <img
+                                  src="./screenshots/img/img/class-avatar.jpg"
+                                  alt=""
+                                  srcset=""
+                                />
+                                <span>Classe 75</span>
+                              </div>
+                            </th>
+                            <td>15 Febbraio 2021</td>
+                            <td>20%</td>
+                            <td>
+                              <span
+                                class="badge text"
+                                style="background-color: green"
+                                >Done</span
+                              >
+                            </td>
                           </tr>
                         </tbody>
                       </table>
                     </div>
                   </div>
-                  <div class="faq" style="font-size: 0.7rem;">
+                  <div class="faq" style="font-size: 0.7rem">
                     <div class="col-5 p-1">
                       <h5 style="background-color: #f7f7f7">F.A.Q.</h5>
                       <div class="accordion" id="accordionExample">
@@ -266,7 +376,7 @@
                   </div>
                 </div>
                 <div class="col-5">
-                  <div class="todo" style="font-size: 0.7rem;">
+                  <div class="todo" style="font-size: 0.7rem">
                     <div class="col-4">
                       <h5 style="background-color: #f7f7f7">Todo</h5>
                       <div class="form-check">
@@ -304,12 +414,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="grafic" style="font-size: 0.7rem;">
+                  <div class="grafic" style="font-size: 0.7rem">
                     <div class="col-8">
                       <div class="immage">
-                        <img src="./screenshots/img/img/stats.jpeg" alt="">
+                        <img src="./screenshots/img/img/stats.jpeg" alt="" />
                       </div>
-                      <ul>Utenti Attivi</ul>
+                      <ul>
+                        Utenti Attivi
+                      </ul>
                       <li>Gennaio: 1200</li>
                       <li>Febbraio: 800</li>
                       <li>Marzo: 1500</li>
